namespaces/training-gpu/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-data-and-registry
  namespace: training-gpu
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              role: data-engineering   # for training data
        - namespaceSelector:
            matchLabels:
              role: infra-ops         # for image registry & storage
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              role: model-registry    # read trained models
        - namespaceSelector:
            matchLabels:
              role: infra-ops         # write logs/artifacts
      ports:
        - protocol: TCP
          port: 5000                 # registry
